--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "axios": "^1.4.0",
     "highlight.js": "^11.8.0",
     "marked": "^5.0.1",
+    "recordrtc": "^5.6.2",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
+    "@types/recordrtc": "^5.6.11",
     "@vitejs/plugin-vue": "^4.1.0",
     "typescript": "~4.9.3",
     "vite": "^4.3.2",
