--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,2 @@
-#VITE_BASE_URL=http://127.0.0.1:8080/wchatgpt-be
-VITE_BASE_URL=https://ichat.x-assn.xyz/wchatgpt-be
+VITE_BASE_URL=http://127.0.0.1:8080/wchatgpt-be
+#VITE_BASE_URL=https://ichat.x-assn.xyz/wchatgpt-be
