--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@ant-design/icons-vue": "^6.1.0",
     "@types/marked": "^4.3.0",
+    "@types/node": "^20.1.4",
+    "@vitejs/plugin-vue-jsx": "^3.0.1",
     "ant-design-vue": "^3.2.20",
     "axios": "^1.4.0",
     "highlight.js": "^11.8.0",
